<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="89dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:textAlignment="viewStart"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/avatar"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/llh1"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/labName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:text="@string/imie"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/eName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:autofillHints=""
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="30sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llh2"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/last_nameLab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:text="@string/nazwisko"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/eLastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:autofillHints=""
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="30sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llh3"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/cityLab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:text="@string/miejscowo"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/eCity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:autofillHints=""
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="30sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llh4"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/numberLab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:text="@string/numer"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/eNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:autofillHints=""
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="30sp"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/change"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#535353"
            android:text="@string/zmie_dane"
            android:textColor="#F8BBD0" />

        <Button
            android:id="@+id/changeImage"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#535353"
            android:text="@string/zmie_zdj_cie"
            android:textColor="#F8BBD0" />

        <Button
            android:id="@+id/delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#535353"
            android:text="@string/usu"
            android:textColor="#F8BBD0" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>